--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "axios": "^1.8.4",
     "classnames": "^2.5.1",
     "html-react-parser": "^5.2.2",
+    "lodash": "^4.17.21",
+    "mobx-react-lite": "^4.1.0",
     "qs": "^6.14.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
