--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -32,7 +32,7 @@
       "@/*": ["src/*"],
       "@utils/*": ["src/utils/*"],
       "@configs/*": ["src/configs/*"],
-      "@types/*": ["src/types/*"],
+      "@types": ["src/types/"],
       "@components/*": ["src/components/*"],
       "@stores/*": ["src/stores/*"],
       "@pages/*": ["src/App/pages/*"],
