--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "classnames": "^2.5.1",
     "html-react-parser": "^5.2.2",
     "lodash": "^4.17.21",
+    "mobx": "^6.13.7",
     "mobx-react-lite": "^4.1.0",
     "qs": "^6.14.0",
     "react": "^19.0.0",
@@ -24,6 +25,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
+    "@types/lodash": "^4.17.16",
     "@types/node": "^22.13.13",
     "@types/qs": "^6.9.18",
     "@types/react": "^19.0.10",
