--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "axios": "^1.8.4",
     "classnames": "^2.5.1",
+    "firebase": "^10.14.1",
     "html-react-parser": "^5.2.2",
     "lodash": "^4.17.21",
     "mobx": "^6.13.7",
