--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "gh-pages": "^6.3.0",
     "globals": "^15.15.0",
     "prettier": "^3.5.3",
+    "rollup": "^4.40.0",
     "sass-embedded": "^1.86.0",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.24.1",
